--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -13,7 +13,7 @@
     bootstrap = "vendor/autoload.php" >
     <testsuites>
       <testsuite name="Project Test Suite">
-        <directory>test</directory>
+        <directory>Tests</directory>
       </testsuite>
     </testsuites>
     <filter>
