--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: php
+
+sudo: false
+
 php:
   - 5.5
   - 5.6
@@ -6,7 +9,9 @@ php:
   - hhvm
   - nightly
   
-before_install:
-  composer self-update
-  
-php composer.phar install
+before_script:
+  - rm -f ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini
+  - composer install
+  - bin/composer install
+  - git config --global user.name travis-ci
+  - git config --global user.email travis@example.com
